Created organization of json files and started adding css and elements to the app

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <title>Jokr!</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
-        <div class="container">
-            <h1>Jokr</h1>
-            <input type="text" id="username" />
-            <br/>
-            <p id="joke">Sike! There's no joke here!</p>
+        <div class="container center">            
+            <h1 class="title">Jokr!</h1>
+            <br><br><br>
+            <p id="joke">"Sike! There's no joke here!"</p>
+            <br><br><br><br><br>
+            <button type="button" id="dislike">
+                    <i class="fa fa-thumbs-o-down"></i>
+            </button>
+            <button type="button" id="like">
+                <i class="fa fa-thumbs-o-up"></i>
+            </button>
         </div>
     </body>
 </html>
